src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__invalid_function_block_instantiation_is_validated.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: Invalid assignment: cannot assign 'STRING' to 'WSTRING'
   ┌─ <internal>:15:16
   │
15 │             fb(ws := s, arr_32 := arr_64); // invalid explicit
   │                ^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'WSTRING'

error[E037]: Invalid assignment: cannot assign 'ARRAY[0..1] OF LINT' to 'ARRAY[0..1] OF DINT'
   ┌─ <internal>:15:25
   │
15 │             fb(ws := s, arr_32 := arr_64); // invalid explicit
   │                         ^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'ARRAY[0..1] OF LINT' to 'ARRAY[0..1] OF DINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'WSTRING'
   ┌─ <internal>:16:16
   │
16 │             fb(s, arr_64); // invalid implicit
   │                ^ Invalid assignment: cannot assign 'STRING' to 'WSTRING'

error[E037]: Invalid assignment: cannot assign 'ARRAY[0..1] OF LINT' to 'ARRAY[0..1] OF DINT'
   ┌─ <internal>:16:19
   │
16 │             fb(s, arr_64); // invalid implicit
   │                   ^^^^^^ Invalid assignment: cannot assign 'ARRAY[0..1] OF LINT' to 'ARRAY[0..1] OF DINT'
